Read style from settings file

--- a/builds/msvc2013/E3Modular.vcxproj
+++ b/builds/msvc2013/E3Modular.vcxproj
@@ -437,6 +437,7 @@ copy $(OutDir)\%(ProgramDatabaseFile) F:\Devices\Vstplugins\test\%(ProgramDataba
     <ClInclude Include="..\..\src\core\Bank.h" />
     <ClInclude Include="..\..\src\core\BankSerializer.h" />
     <ClInclude Include="..\..\src\core\GlobalHeader.h" />
+    <ClInclude Include="..\..\src\core\VoiceMonitorCore.h" />
     <ClInclude Include="..\..\src\core\Module.h" />
     <ClInclude Include="..\..\src\core\ModelCatalog.h" />
     <ClInclude Include="..\..\src\core\Processor.h" />
@@ -455,11 +456,10 @@ copy $(OutDir)\%(ProgramDatabaseFile) F:\Devices\Vstplugins\test\%(ProgramDataba
     <ClInclude Include="..\..\src\core\Voice.h" />
     <ClInclude Include="..\..\src\gui\AudioEditor.h" />
     <ClInclude Include="..\..\src\gui\BrowserPanel.h" />
-    <ClInclude Include="..\..\src\gui\ColourIds.h" />
     <ClInclude Include="..\..\src\gui\CommandTarget.h" />
-    <ClInclude Include="..\..\src\gui\MidiMonitor.h" />
+    <ClInclude Include="..\..\src\gui\VoiceMonitor.h" />
     <ClInclude Include="..\..\src\gui\Resources.h" />
-    <ClInclude Include="..\..\src\gui\Skin.h" />
+    <ClInclude Include="..\..\src\gui\Style.h" />
     <ClInclude Include="..\..\src\gui\EditorPanel.h" />
     <ClInclude Include="..\..\src\gui\StackedPanel.h" />
     <ClInclude Include="..\..\src\gui\ToolPanel.h" />
@@ -514,13 +514,14 @@ copy $(OutDir)\%(ProgramDatabaseFile) F:\Devices\Vstplugins\test\%(ProgramDataba
     <ClCompile Include="..\..\src\core\Instrument.cpp" />
     <ClCompile Include="..\..\src\core\Sink.cpp" />
     <ClCompile Include="..\..\src\core\Voice.cpp" />
+    <ClCompile Include="..\..\src\core\VoiceMonitorCore.cpp" />
     <ClCompile Include="..\..\src\gui\AudioEditor.cpp" />
     <ClCompile Include="..\..\src\gui\BrowserPanel.cpp" />
     <ClCompile Include="..\..\src\gui\CommandTarget.cpp" />
     <ClCompile Include="..\..\src\gui\EditorPanel.cpp" />
-    <ClCompile Include="..\..\src\gui\MidiMonitor.cpp" />
+    <ClCompile Include="..\..\src\gui\VoiceMonitor.cpp" />
     <ClCompile Include="..\..\src\gui\Resources.cpp" />
-    <ClCompile Include="..\..\src\gui\Skin.cpp" />
+    <ClCompile Include="..\..\src\gui\Style.cpp" />
     <ClCompile Include="..\..\src\gui\StackedPanel.cpp" />
     <ClCompile Include="..\..\src\gui\ToolPanel.cpp" />
     <ClCompile Include="..\..\src\modules\Delay.cpp" />
