--- a/test/bin/e3m.settings
+++ b/test/bin/e3m.settings
@@ -1,9 +1,24 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<Settings>
-  <Application Autosave="1" BankPath="D:\Dev\C++\Projects\Nexus2\test\bin\TestBank.nexus"/>
-  <AudioDeviceState DeviceType="ASIO" OutputDeviceName="GR-55" InputDeviceName="GR-55"
-                    SampleRate="44100" BufferSize="432"/>
-  <MidiInput name="QUNEO"/>
-  <MidiInput name="microKEY-25"/>
-</Settings>
+<E3MSettings>
+  <Application Autosave="1" BankPath="" Style=""/>
+  <Standalone>
+    <Window state=""/>
+    <AudioDeviceState DeviceType="" OutputDeviceName="" InputDeviceName=""
+                      SampleRate="" BufferSize=""/>
+  </Standalone>
+  <Plugin>
+    <Window state=""/>
+  </Plugin>
+  <Style name="Default">
+    <Color name="background" argb="ff5f5f60"/>
+    <Color name="contentBackground" argb="ffbebdbb"/>
+    <Color name="darkText" argb="ffffffff"/>
+    <Color name="lightText" argb="ffbdbcba"/>
+    <Color name="highlight" argb="ffcf732f"/>
+    <Color name="buttonOffBackground" argb="ff3e4042"/>
+    <Color name="buttonOnBackground" argb="ffd08930"/>
+    <Color name="buttonOffText" argb="ffbdbcba"/>
+    <Color name="buttonOnText" argb="ff000000"/>
+  </Style>
+</E3MSettings>
