--- a/test/builds/msvc2013/E3ModularTest.vcxproj.filters
+++ b/test/builds/msvc2013/E3ModularTest.vcxproj.filters
@@ -34,5 +34,8 @@
     <None Include="..\..\Core_AllTests.inc">
       <Filter>src</Filter>
     </None>
+    <None Include="..\..\Gui_AllTests.inc">
+      <Filter>src</Filter>
+    </None>
   </ItemGroup>
 </Project>
