--- a/builds/msvc2013/E3Modular.vcxproj
+++ b/builds/msvc2013/E3Modular.vcxproj
@@ -457,12 +457,12 @@ copy $(OutDir)\%(ProgramDatabaseFile) F:\Devices\Vstplugins\test\%(ProgramDataba
     <ClInclude Include="..\..\src\gui\AudioEditor.h" />
     <ClInclude Include="..\..\src\gui\BrowserPanel.h" />
     <ClInclude Include="..\..\src\gui\CommandTarget.h" />
+    <ClInclude Include="..\..\src\gui\TabComponent.h" />
+    <ClInclude Include="..\..\src\gui\TableComponent.h" />
     <ClInclude Include="..\..\src\gui\VoiceMonitor.h" />
     <ClInclude Include="..\..\src\gui\Resources.h" />
     <ClInclude Include="..\..\src\gui\Style.h" />
     <ClInclude Include="..\..\src\gui\EditorPanel.h" />
-    <ClInclude Include="..\..\src\gui\StackedPanel.h" />
-    <ClInclude Include="..\..\src\gui\ToolPanel.h" />
     <ClInclude Include="..\..\src\modules\Delay.h" />
     <ClInclude Include="..\..\src\modules\Envelopes.h" />
     <ClInclude Include="..\..\src\modules\Master.h" />
@@ -519,11 +519,11 @@ copy $(OutDir)\%(ProgramDatabaseFile) F:\Devices\Vstplugins\test\%(ProgramDataba
     <ClCompile Include="..\..\src\gui\BrowserPanel.cpp" />
     <ClCompile Include="..\..\src\gui\CommandTarget.cpp" />
     <ClCompile Include="..\..\src\gui\EditorPanel.cpp" />
+    <ClCompile Include="..\..\src\gui\TabComponent.cpp" />
+    <ClCompile Include="..\..\src\gui\TableComponent.cpp" />
     <ClCompile Include="..\..\src\gui\VoiceMonitor.cpp" />
     <ClCompile Include="..\..\src\gui\Resources.cpp" />
     <ClCompile Include="..\..\src\gui\Style.cpp" />
-    <ClCompile Include="..\..\src\gui\StackedPanel.cpp" />
-    <ClCompile Include="..\..\src\gui\ToolPanel.cpp" />
     <ClCompile Include="..\..\src\modules\Delay.cpp" />
     <ClCompile Include="..\..\src\modules\Envelopes.cpp" />
     <ClCompile Include="..\..\src\modules\Master.cpp" />
