--- a/test/bin/e3m.settings
+++ b/test/bin/e3m.settings
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <E3MSettings>
-  <Application Autosave="1" BankPath="" Style=""/>
+  <Application Autosave="1" RecentBank="" Style=""/>
   <Standalone>
     <Window state=""/>
     <AudioDeviceState DeviceType="" OutputDeviceName="" InputDeviceName=""
